# popsimprep

./: .gitignore  PopSimPrep-StartHere-v2.ipynb  batch_run_popsim.py  pyproject.toml
.devcontainer/: devcontainer.json
docker/: dev.Dockerfile
popsim/: PopSimPrep-StartHere-v2.ipynb  prep_config.json
popsim/configs/: _prep3_controls.csv  controls.csv  logging.yaml  settings.yaml
popsim/scripts/: validation.ipynb  verification.yaml
scripts/: validation_notebook.ipynb  verify.py
