[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "popsimwrapper"
version = "0.1.0"
description = "popsimwrapper: wrapper utilities around PopulationSim for SynPop workflows"
requires-python = ">=3.11"

dependencies = [
  # Core data stack
  "pandas>=2.2.0",
  "numpy>=1.26.0,<3.0.0",
  "scipy>=1.14.0",
  "pyarrow>=18.0.0",
  "pyyaml>=6.0.0",
  "python-dotenv>=1.0.0",
  "unidecode>=1.3.0",

  # Geo stack
  "geopandas>=1.0.0",
  "shapely>=2.0.0",
  "pyproj>=3.6.0",
  "fiona>=1.10.1",

  # Jupyter / notebooks
  "jupyterlab>=4.2.0",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.8",

  # Synthetic population
  "populationsim>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
  "black>=24.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["popsimwrapper*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
